<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:focusable="true"
    android:orientation="vertical"
    android:padding="@dimen/_8sdp"
    tools:context="com.carsecurity.carsecurity.Registration">


    <ImageView
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_10sdp"
        android:contentDescription="@string/applicatiion_logo"
        android:src="@drawable/applogo" />


    <EditText
        android:id="@+id/etName"
        style="@style/Edit_Text"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:paddingTop="@dimen/_5sdp"
        android:textColor="#000000"
        android:textColorHint="#ffffff"
        android:textSize="@dimen/_16sdp" />

    <EditText
        android:id="@+id/etEmailAddress"
        style="@style/Edit_Text"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingTop="@dimen/_5sdp"
        android:textColor="#000000"
        android:textColorHint="#ffffff"
        android:textSize="@dimen/_16sdp" />

    <EditText
        android:id="@+id/etPhoneNumber"
        style="@style/Edit_Text"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:hint="@string/phone"
        android:inputType="phone"
        android:maxLength="15"
        android:paddingTop="@dimen/_5sdp"
        android:textColor="#000000"
        android:textColorHint="#ffffff"
        android:textSize="@dimen/_16sdp" />

    <EditText
        android:id="@+id/etPasswordRegister"
        style="@style/Edit_Text"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingTop="@dimen/_5sdp"
        android:textColor="#000000"
        android:textColorHint="#ffffff"
        android:textSize="@dimen/_16sdp" />

    <EditText
        android:id="@+id/etPasswordRegisterConfirm"
        style="@style/Edit_Text"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:paddingTop="@dimen/_5sdp"
        android:textColor="#000000"
        android:textColorHint="#ffffff"
        android:textSize="@dimen/_16sdp" />

    <Button
        android:id="@+id/bRegister"
        style="@style/Button"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/register"
        android:textColor="#ffffff"
        android:textStyle="bold" />


</LinearLayout>



