<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.carsecurity.carsecurity.EditProfile">


        <ImageView
            android:id="@+id/edit_image"
            android:layout_width="@dimen/_90sdp"
            android:layout_height="@dimen/_80sdp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_10sdp"
            android:contentDescription="@string/profilepicture"
            android:src="@drawable/applogo" />


        <TextView
            android:id="@+id/txAddImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_10sdp"
            android:text="@string/add_profile_picture"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txEditFullName"
                android:layout_width="@dimen/_130sdp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:text="@string/full_name"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etEditFullName"
                style="@style/Edit_Text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:hint="@string/edit_full_name"
                android:inputType="textPersonName"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txEditPhoneNumber"
                android:layout_width="@dimen/_130sdp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:text="@string/phone"
                android:textColor="#000000"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etEditPhoneNumber"
                style="@style/Edit_Text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:hint="@string/edit_phone_number"
                android:inputType="phone"
                android:maxLength="14"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txEditOldPassword"
                android:layout_width="@dimen/_130sdp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:text="@string/old_password"
                android:textColor="#000000"
                android:textSize="@dimen/_18sdp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etEditOldPassword"
                style="@style/Edit_Text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:hint="@string/old_password "
                android:inputType="textPassword"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txEditNewPassword"
                android:layout_width="@dimen/_130sdp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:text="@string/new_password"
                android:textColor="#000000"
                android:textSize="@dimen/_18sdp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etEditNewPassword"
                style="@style/Edit_Text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:hint="@string/enter_new_password"
                android:inputType="textPassword"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff" />
        </LinearLayout>

        <Button
            android:id="@+id/bUpdate"
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_20sdp"
            android:text="@string/update "
            android:textColor="#ffffff"
            android:textStyle="bold" />
    </LinearLayout>
